aof持久化流程完善

--- a/redis.conf
+++ b/redis.conf
@@ -8,4 +8,4 @@ appendonly yes
 # aof 文件名称
 appendfilename appendonly.aof
 # aof 级别. always | everysec | no
-appendfsync everysec
+appendfsync always
