--- a/redis.conf
+++ b/redis.conf
@@ -9,3 +9,5 @@ appendonly yes
 appendfilename appendonly.aof
 # aof 级别. always | everysec | no
 appendfsync always
+# 每执行多少次 aof 操作后，进行一次重写
+auto-aof-rewrite-after-cmds 2
