--- a/redis.conf
+++ b/redis.conf
@@ -8,6 +8,6 @@ appendonly yes
 # aof 文件名称
 appendfilename appendonly.aof
 # aof 级别. always | everysec | no
-appendfsync always
+appendfsync everysec
 # 每执行多少次 aof 操作后，进行一次重写
-auto-aof-rewrite-after-cmds 2
+auto-aof-rewrite-after-cmds 1000
